--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="aboutme.png" alt="col1">
+                    <img src="Aboutme.png" alt="col1">
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
