--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
                 </ul>
                 <i class="fas fa-solid fa-bars" onclick="openmenu()"></i>
             </nav>
+            <div id="home">
             <div class="header-text">
                 <p>Cloud Engineer</p>
                 <h1>Hi, I'm <span>Ashish</span></h1>
+            </div>
             </div>
         </div>
     </div>
@@ -44,9 +46,11 @@
     <div id="about">
         <div class="container">
             <div class="row">
+                <div class="section" id="about">
                 <div class="about-col-1">
                     <img src="Aboutme.png" alt="col1">
                 </div>
+                
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
                     <p>I thrive on the challenges of designing and optimizing cloud-based solutions. I'm passionate about staying ahead in the rapidly evolving cloud landscape, always eager to learn and adapt to new technologies. With a problem-solving mindset and a keen eye for detail, I enjoy tackling complex tasks like optimizing cloud infrastructure for performance and cost-efficiency, automating processes for seamless scalability, and ensuring robust security across environments.</p>
@@ -75,11 +79,13 @@
                     </ul>
                 </div>
                 </div>
+                </div>
             </div>
         </div>
     </div>
     <!-- -----------------services------------------------->
-     <div id="services">
+    <div id="services">
+        <div class="section">
         <div class="container">
             <h1 class="sub-title">My Services</h1>
             <div class="services-list">
@@ -100,9 +106,11 @@
                 </div>
             </div>
         </div>
+    </div>
      </div>
      <!-- -------------------portfolio------------------ -->
       <div id="portfolio">
+        <div class="section">
         <div class="container">
             <h1 class="sub-title">My Work</h1>
             <div class="work-list">
@@ -124,9 +132,11 @@
             </div>
 
         </div>
+        </div>
       </div>
 <!-- --------------------------contact ---------------------- -->
 <div id="contact">
+    <div class="section">
     <div class="container">
         <div class="row">
             <div class="contact-left">
@@ -150,6 +160,7 @@
             </div>
         </div>
     </div>
+</div>
 </div>
 
     <footer>
@@ -228,6 +239,19 @@ function topFunction() {
     document.body.scrollTop = 0; // For Safari
     document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
 }
+document.addEventListener('scroll', () => {
+    const sections = document.querySelectorAll('.section');
+    const scrollPosition = window.scrollY + window.innerHeight / 2;
+
+    sections.forEach(section => {
+        if (section.offsetTop <= scrollPosition && section.offsetTop + section.clientHeight > scrollPosition) {
+            section.classList.add('active');
+        } else {
+            section.classList.remove('active');
+        }
+    });
+});
+
 
   </script>
   
