--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
     <div id = 'header'>
         <div class="container">
             <nav>
-                <img src="logo.png" class = 'logo'>
+                <a href="" class="logo"><span>ASHI</span>SH</a>
                 <ul id="sidemenu">
                     <li><a href='#header'>Home</a></li>
+            
                     <li><a href='#about'>About</a></li>
                     <li><a href='#services'>Services</a></li>
                     <li><a href='#portfolio'>Portfolio</a></li>
@@ -36,8 +37,15 @@
             </nav>
             <div id="home">
             <div class="header-text">
-                <p>Cloud Engineer</p>
-                <h1>Hi, I'm <span>Ashish</span></h1>
+                <div class="pop-in">
+                <p id="sub-title">Cloud Engineer</p>
+                <h1 class="typing-text" id="title">Hi, I'm <span></span></h1>
+                <div class="social-icons">
+                    <a href="https://www.linkedin.com/in/ashish-rangabatla-230abb280" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+                    <a href="https://www.instagram.com/ashish.namikaze/" target="_blank"><i class="fa-brands fa-instagram"></i></a>   
+                    <a href="https://github.com/AshishUchiha-afk/" target="_blank"><i class="fa-brands fa-github"></i></a>   
+                </div>   
+                </div>
             </div>
             </div>
         </div>
@@ -142,11 +150,7 @@
             <div class="contact-left">
                 <h1 class="sub-title">Contact ME</h1>
                 <p><i class="fa-solid fa-share"></i>rangabatlaash@gmail.com</p>
-                <p><i class="fa-solid fa-phone"></i>+91 8179952118</p>
-                <div class="social-icons">
-                    <a href="https://www.linkedin.com/in/ashish-rangabatla-230abb280"><i class="fa-brands fa-linkedin-in"></i></a>
-                    <a href="https://www.instagram.com/ashish.namikaze/"><i class="fa-brands fa-instagram"></i></a>   
-                </div>    
+                <p><i class="fa-solid fa-phone"></i>+91 8179952118</p> 
                 <a href="Ashish_Resume.pdf" download class="btn">Download CV</a>
             </div>
             <div class="contact-right">
@@ -220,15 +224,16 @@
 let goToTopBtn = document.getElementById("goToTopBtn");
 
 // When the user scrolls down 20px from the top of the document, show the button
-window.onscroll = function() {scrollFunction()};
-
-function scrollFunction() {
-    if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-        goToTopBtn.style.display = "block";
-    } else {
-        goToTopBtn.style.display = "none";
-    }
-}
+window.addEventListener('scroll', function () {
+    let sections = document.querySelectorAll('.section');
+    sections.forEach(section => {
+        const sectionTop = section.getBoundingClientRect().top;
+        const triggerPoint = window.innerHeight / 1.3;
+        if (sectionTop < triggerPoint) {
+            section.classList.add('active');
+        }
+    });
+});
 
 // When the user clicks on the button, scroll to the top of the document
 function topFunction() {
@@ -251,6 +256,8 @@ document.addEventListener('scroll', () => {
         }
     });
 });
+
+
 
 
   </script>
